--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,11 @@ body {
     margin: 0;
     padding: 0;
   }
+
+  img {
+    max-width: 100%;
+    display: block;
+  }
   
   ul {
     text-decoration: none;
