--- a/src/css/user_api.css
+++ b/src/css/user_api.css
@@ -144,3 +144,31 @@ outline: none;
     outline: none;
     scale: 1.05;
   }
+
+  .back-to-top {
+    display: none;
+    position: fixed;
+    bottom: 16px;
+    right: 16px;
+    border: none;
+    background-color: transparent;
+    padding: 8px;
+
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  .back-to-top:hover {
+    background-color: #281e7295;
+    
+  }
+
+  .back-to-top:hover .fingerUp {
+    stroke: 2px;
+    stop-color: #ddd;
+   fill: #ddd;
+  }
+
+  .back-to-top.visible {
+    display: block;
+  }
