--- a/src/css/img_search.css
+++ b/src/css/img_search.css
@@ -1,6 +1,10 @@
+body {
+    background-color: #c3c3c3;
+}
+
 #root {
 display: flex;
-gap: 8px;
+gap: 16px;
 flex-direction: column;
 align-items: center;
 }
@@ -40,11 +44,11 @@ align-items: center;
 }
 
 .field:focus {
-outline: none;
+    outline: none;
 }
 
 .field:focus .search-form{
-  border-color: #ff0;
+    border-color: #ff0;
 }
 
 
@@ -82,38 +86,15 @@ outline: none;
     fill: #fff
 }
 
-.gallery {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
-  }
+
   
-  .photo-card {
-    height: 300px;
-    width: 320px;
-    border-radius: 8px;
-    box-shadow: 8px 8px 8px rgba(48, 47, 47, 0.1);
-  }
-  
-  .info {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
-  }
-  
- 
-  
+
   .load-more.visible {
     display: flex;
   }
   
   .load-more {
-    position: fixed;
-    bottom: 10px;
+  
     display: none;
     gap: 12px;
     align-items: center;
@@ -147,20 +128,61 @@ outline: none;
   .load-more:focus .iconLoader {
     fill: #eee;
   }
+
+
+  .gallery,
+  .info {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .gallery {
+    gap:16px;
+    padding-top: 60px;
+    justify-content: center;
+  }
+  
+  .gallery__link {
+   
+    min-width: 320px;
+    flex-basis: calc((100% - 80px) / 4);
+    border: 2px solid #f1eeee;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: all 0.3s;
+  }
+  
+  .gallery__link:hover,
+  .gallery__link:focus {
+    transform: scale(1.03);
+    outline: none;
+
+  }
   
   .gallery-item {
-    font-family: inherit;
-    color: inherit;
-    text-decoration: none;
-    transition: all 0.4s ease-in-out;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
-
-  .gallery-item:hover,
-  .gallery-item:focus {
-    outline: none;
-    scale: 1.05;
+  
+  .gallery-item__img {
+    display: block;
+    height: 30vh;
+    object-fit: cover;
   }
+  
+  .info {
+    padding: 10px;
+    justify-content: space-evenly;
+  }
+  
+  .info-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #212121;
+  }
+  
 
   .back-to-top.is-hidden {
     display: none;
