--- a/src/css/img_search.css
+++ b/src/css/img_search.css
@@ -184,12 +184,12 @@ align-items: center;
   }
   
 
-  .back-to-top.is-hidden {
-    display: none;
+  .back-to-top.visible {
+    display: block;
   }
 
   .back-to-top {
-    
+    display: none;
     position: fixed;
     bottom: 16px;
     right: 16px;
