--- a/src/css/img_search.css
+++ b/src/css/img_search.css
@@ -1,4 +1,13 @@
 body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 1em;
+  line-height: 1.5;
+  color: #212121;
+  margin: 0;
+  padding: 16px;
     background-color: #c3c3c3;
 }
 
@@ -10,6 +19,8 @@ align-items: center;
 }
 
 .header {
+    display: flex;
+    gap: 8px;
     position: fixed;
     top: 0;
     left: 0;
@@ -174,13 +185,20 @@ align-items: center;
   .info {
     padding: 10px;
     justify-content: space-evenly;
+
   }
   
   .info-item {
+    font-family: Haettenschweiler,  sans-serif;
+    text-decoration: none;
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #212121;
+    color: #555;
+  }
+
+  .info-item >b{
+    text-decoration: none;
   }
   
 
@@ -210,3 +228,30 @@ align-items: center;
     background-color: #281e7225;
     box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
   }
+/* ============================= */
+.select_wrapper {
+   display: inline-flex;
+   align-items: center;
+    border: 3px solid #fff;
+    border-radius: 32px;
+    padding: 0 8px;
+}
+
+.til {
+    font-size: 18px;
+    color: #aaa;
+    font-weight: 500;
+}
+
+  .select {
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+   border: none;
+    background-color: transparent;
+    outline: none;
+    padding: 6px ;
+    color: #aaa;
+    font-size: 18px;
+  }
+
