--- a/src/css/film-search.scss
+++ b/src/css/film-search.scss
@@ -74,6 +74,20 @@ img {
 
   }
 
+  .header__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 8px;
+
+    
+   @media screen and (min-width: 768px) {
+    flex-direction: row-reverse;
+    flex-wrap: nowrap;
+   
+   }
+  }
+
   .header__wrapper-top  {
   //  display: grid;
   //  grid-auto-flow: row;
@@ -82,6 +96,10 @@ img {
   //   grid-row-gap: 8px;
   //   grid-column-gap: 4px;
     // height: 40px;
+    display: flex;
+
+    gap:4px;
+    height: 34px;
   }
 
 
@@ -90,10 +108,18 @@ img {
     gap: 4px;
     justify-self: center;
     order: 4;
-    height: 40px;
+    // height: 40px;
     align-self: flex-end;
     align-items: center;
     margin: 0 auto ;
+
+    @media screen and (min-width: 768px) {
+      flex-wrap: wrap;
+      align-self: flex-end;
+      justify-self: end;
+      margin-left: auto;
+      order: 3;
+     }
 
   }
 
@@ -125,7 +151,18 @@ img {
   // justify-content: start;
 
     @media screen and (min-width: 768px) {
+      width: 704px;
+      height: 222px;
       padding: 16px;
+      border-radius: 1min5px;
+     }
+
+     
+    @media screen and (min-width: 1280px) {
+      min-width: 1216px;
+      min-height: 316px;
+      padding: 16px 32px 32px 32px;
+      border-radius: 15px;
      }
   
     background-image: linear-gradient(
@@ -220,7 +257,7 @@ img {
 .header__home-link,
 .header__library-link {
   display: block;
-  width: 120px;
+  height: 34px;
 }
 
 
@@ -267,19 +304,36 @@ img {
     display: flex;
     justify-content: space-between;
     background-color: #fff;
-   justify-self: flex-end;
+  //  justify-self: flex-end;
+
+   @media screen and (min-width: 768px) {
+      width: 165px;
+      height: 38px;
+      order:0;
+
+   }
+
+   
+  @media screen and (min-width: 1280px) {
+    width: 187px;
+    height: 42px;
+   }
   }
   
   .header__form-input {
    
     height: 34px;
-    width: 252px;
     padding-left: 14px;
     border: none;
     color: #000000;
     background-color: transparent;
 
+   
+
+    
+
   }
+
   .header__form-btn {
     width: 30px;
     padding: 7px;
@@ -354,9 +408,12 @@ img {
    display: flex;
    align-items: center;
    align-self: end;
-   margin: 0 auto -110px;
+   margin: 0 auto -100px;
 
-
+   @media screen and (min-width: 768px) {
+    margin: 0;
+    order: 4;
+   }
   }
 
   .header__film-svg {
