--- a/src/css/film-search.scss
+++ b/src/css/film-search.scss
@@ -370,18 +370,25 @@ img {
   }
   
   .header__form-input {
-   
+  
     height: 34px;
     padding-left: 14px;
     border: none;
     color: #000000;
     background-color: transparent;
+    
 
      @media screen and (min-width: 768px) {
     width: 110px;
 
     }
 
+  }
+
+  .header__form-input:focus {
+    outline: none;
+    background-color: transparent;
+    
   }
 
   .header__form-btn {
@@ -413,6 +420,14 @@ img {
  
     stroke: #000000;
     fill: #ffffff;
+  }
+
+
+  .header__root-mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
   }
   
   .header__btn-watched {
