--- a/src/css/film-search.scss
+++ b/src/css/film-search.scss
@@ -566,3 +566,43 @@ img {
         cursor: pointer;
       }
   
+      /* =============animation=================== */
+
+.btn-container {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+ /* border-radius: 10px; */
+
+}
+
+.circle {
+  display: block;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #f8d24e90;
+  pointer-events: none;
+  width: 50px;    
+  height: 50px;
+  transform: translate(-50%, -50%);
+
+  z-index: 2;
+  animation: scaleUp 1s  forwards;
+}
+
+@keyframes scaleUp {
+  0% {
+      opacity: 1;
+      transform: translate(-50%, -50%) scale(0) ;
+  }
+  100% {
+      opacity: 0;
+      transform: translate(-50%, -50%) scale(15) ;
+  }
+}
