--- a/src/css/film-search.scss
+++ b/src/css/film-search.scss
@@ -565,11 +565,26 @@ img {
         transition: 0.4s ease;
         cursor: pointer;
       }
+
+:root {
+    
+    --current-color: #B92F2C;
+    --primary-text-color: #ffffff;
+    --secondary-text-color: #000000;
+    --add-text-color: #8c8c8c;
+    --footer-text-color: #545454;
+    --background-color: #f7f7f7;
+    --backdrop-color: #00000033;
+    --overlay-color: #00000066;
+    --time: 250ms;
+   
+}
+
   
       /* =============animation=================== */
 
 .button {
-  position: relative;
+ 
 }      
 
 .btn-container {
