--- a/src/filmoteka/partials/lbrary-header.html
+++ b/src/filmoteka/partials/lbrary-header.html
@@ -2,10 +2,10 @@
         <div class="header__container container">
             <div class="header__background">
                 <div class="header__btn-wrapper-top">
-                    <a href="./index.html" class="header__btn-home btn current">
+                    <a href="./index.html" class="header__btn-home btn ">
 						HOME
 					  </a>
-					  <a href="./my-library.html" class="header__btn-library btn ">
+					  <a href="./my-library.html" class="header__btn-library btn current ">
 						MY LIBRARY
 					  </a>
                 </div>
@@ -21,6 +21,11 @@
 					</button>
                 </form>
                 
+
+                <div class="header__btn-wrapper-bottom">
+                    <button class="header__btn-watched btn" type="button">Watched</button>
+                    <button class="header__btn-queue btn" type="button">Queue</button>
+                </div>
                 <a class="header__logo-link" href="./index.html">
 					<svg class="header__film-svg">
 						<use href="./images/icons/sprite.svg#film"></use>
