--- a/src/filmoteka/sass/index.scss
+++ b/src/filmoteka/sass/index.scss
@@ -1,4 +1,7 @@
 @import '../../';
 @import './base/global';
-// @import './base/fonts';
 @import './base/container';
+@import './utils/variables';
+@import './utils/hidden';
+
+@import './components/header';
